fixed paragraph spacing

--- a/styles/case-studies.css
+++ b/styles/case-studies.css
@@ -95,9 +95,13 @@ main img, main div, main ul, main aside, main blockquote, main figure, main figc
 #case-study-title {
     position: relative;
     max-width: 1312px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 3rem 2.4rem 2.4rem 2.4rem;
+    
+    font-family: fraunces;
+    font-weight: 500;
+    letter-spacing: -0.05rem;
+    
+    margin: 0 auto;
+    padding: 2.4rem;
 }
 
 .hero {
